--- a/html/login/user.html
+++ b/html/login/user.html
@@ -110,7 +110,15 @@
             <div class="sidebar__dropdown">
               <ul class="sidebar__dropdown-list">
                 <li class="sidebar__dropdown-item">
-                  <a href="javascript:;" class="sidebar__dropdown-link">請購單需求申請</a>
+                  <a href="javascript:;" class="sidebar__dropdown-link is-dropdown">請購單需求申請</a>
+                  <ul class="dropdown">
+                    <li>
+                      <a href="javascript:;">- 開口契約請購申請</a>
+                    </li>
+                    <li>
+                      <a href="javascript:;">- 小額請購申請</a>
+                    </li>
+                  </ul>
                 </li>
                 <li class="sidebar__dropdown-item">
                   <a href="javascript:;" class="sidebar__dropdown-link">請購單核准</a>
@@ -141,7 +149,15 @@
             <div class="sidebar__dropdown">
               <ul class="sidebar__dropdown-list">
                 <li class="sidebar__dropdown-item">
-                  <a href="javascript:;" class="sidebar__dropdown-link">物料線上申請單</a>
+                  <a href="javascript:;" class="sidebar__dropdown-link is-dropdown">物料線上申請單</a>
+                  <ul class="dropdown">
+                    <li>
+                      <a href="javascript:;">- 開口契約領用申請</a>
+                    </li>
+                    <li>
+                      <a href="javascript:;">- 小額領用申請</a>
+                    </li>
+                  </ul>
                 </li>
                 <li class="sidebar__dropdown-item">
                   <a href="javascript:;" class="sidebar__dropdown-link">部門人員審核</a>
