暫時加入管理者按鈕給PM審查

--- a/html/home/index.html
+++ b/html/home/index.html
@@ -42,6 +42,7 @@
               <a class="transition duration-300 text-orange hover:text-dark-orange" href="javascript:;">忘記密碼</a>
             </div>
             <a class="user-login__btn" href="../login/user.html">登入</a>
+            <a class="user-login__btn" href="../login/manager.html">管理者登入</a>
           </form>
         </div>
       </div>
